# recommendation-system

./: README.md  main.py  pyproject.toml
api/routes/: books.py
csv/: book_data.csv  book_data_processed.csv  book_tagged.csv
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/routes/: __root.tsx  demo.tsx  index.tsx
