[project]
name = "recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "numpy<2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "surprise>=0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
